--- a/lab3.html
+++ b/lab3.html
@@ -1,7 +1,7 @@
 <html>
 	 <head>
 	  <meta charset="utf-8" />
-	  <title>Сайт-звіт студента Шилованця В.О.</title>
+	  <title>Сайт-звіт студентки Калініної Наталії</title>
 	  <style type="text/css">
 	   body {
 	    font: 10pt Arial, Helvetica, sans-serif; /* Шрифт на веб-странице */
@@ -52,10 +52,10 @@
 	 </head>
 	 <body>
 	  <div id="container">
-	   <div id="header">Сайт-звіт студента Шилованця В.О.</div>
+	   <div id="header">Сайт-звіт студентки Калініної Наталії</div>
 	   <div id="content">
 	    <h2> Лабораторна робота №3. (Google малюнок) </h2>
-<img src="https://docs.google.com/drawings/d/e/2PACX-1vQle3FjgC6JBaQHqIO47I-nl_5h1GTfzGi3y75Xki1HJ2w6RZyezYpHktLjUb2syojZK46HtPdNF6TW/pub?w=600&amp;h=450">
+<img src="https://docs.google.com/drawings/d/e/2PACX-1vQMpJWHqzD2VCV5_F53NuvzuS7ENe42Y-DHY_2neIThWQdQeAF9v9D8EUChH0_Y9YEfymSVrwqwINm2/pub?w=600&amp;h=450">
    </div>
 	   <div id="sidebar">
 	    <p><a href="index.html">Домашня сторінка</a></p>
@@ -67,7 +67,7 @@
 	    <p><a href="lab6.html">Лабораторна робота №6. (Google група)</a></p>
 	   </div>
 	   <div class="clear"></div>
-	   <div id="footer">&copy; four4anoff</div>
+	   <div id="footer">&copy; kalinina</div>
 	  </div>
 	 </body>
 	</html>
