--- a/lab7.html
+++ b/lab7.html
@@ -1,7 +1,7 @@
 <html>
 	 <head>
 	  <meta charset="utf-8" />
-	  <title>Сайт-звіт студента Шилованця В.О.</title>
+	  <title>Сайт-звіт студентки Калініної Наталії</title>
 	  <style type="text/css">
 	   body {
 	    font: 10pt Arial, Helvetica, sans-serif; /* Шрифт на веб-странице */
@@ -52,7 +52,7 @@
 	 </head>
 	 <body>
 	  <div id="container">
-	   <div id="header">Сайт-звіт студента Шилованця В.О.</div>
+	   <div id="header">Сайт-звіт студентки Калініної Наталії</div>
 	   <div id="content">
 	    <h2> Лабораторна робота №7. (Google таблиця) </h2>
 <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vR111AhnqAPBlJqEbXhhGHGTJH7Tg3uZMH6o1b1ZClch2izrNHyIHhRs6X2WMrobQ/pubhtml?widget=true" width="950" height="450" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
@@ -68,7 +68,7 @@
 		   <p><a href="lab7.html">Лабораторна робота №7. (Google таблиця)</a></p>
 	   </div>
 	   <div class="clear"></div>
-	   <div id="footer">&copy; four4anoff</div>
+	   <div id="footer">&copy; kalinina</div>
 	  </div>
 	 </body>
 	</html>
